# forge-prime

./: .gitignore  CLAUDE_CODE_BRIEFING (1).md  FORGE_PRIME_BUILD_SPEC.md  OSHO_COMPLETION_SPEC.md  README.md  install.sh  pyproject.toml  requirements.txt
claude/: AGENTS.md  CLAUDE.md  settings.json
claude/agents/: implementer.md
claude/commands/: fp-build.md  fp-compile.md  fp-quick.md  fp-status.md
claude/rules/: api-design.md  database.md  frontend.md  python-backend.md  security.md  testing.md
dashboard/: app.py
dashboard/static/: app.js  index.html  style.css
quality/: CHANGES.md  SOURCE.md  checks.py  engine.py  quality_product_checks.py  quality_product_checks_v2.py  quality_product_checks_v3.py  quality_product_checks_v4.py  quality_product_checks_v5.py  quality_product_checks_v6.py  standards.md  verify_doc_matches_code.py
quality/dimensions/: __init__.py  (+2 more)
runner/: __main__.py  _time.py  classifier.py  cli.py  config.py  cost_tracker.py  deadman.py  git_sync.py  halt.py  logs.py  loop.py  picker.py  router.py  ruff.toml  secrets.py  session.py  stages.py  state.py  tools.py  verifier.py  version.py  wiki_retriever.py  wiki_writer.py
scripts/: forge-os-setup-reference.sh  forge-ship.sh  git-sync-check.sh  guardrail.sh  post-chunk.sh  pre-commit-quality.sh
systemd/: forge-dashboard.service  forge-wiki-compile.timer
templates/: CONDUCTOR.md  constitution.md  plan.yaml  post-chunk.sh  project.yaml
tests/: test_classifier.py  test_router.py  test_snapshot.py  test_verifier.py  test_wiki_retriever.py  test_wiki_writer.py
wiki/: compiler.py
(+8 files in other folders)
